# CourseWork4

./: ().py  README.md  pyproject.toml
config/: settings.py  urls.py
messagesender/: admin.py  apps.py  models.py  urls.py  views.py
messagesender/migrations/: 0001_initial.py
messagesender/templates/messagesender/: base.html  index.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
